--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,47 +1,30 @@
-# .github/workflows/testing.yml 
-# (Or you can use ci-cd.yml and add a deployment job later)
+# .github/workflows/testing.yml
 
-name: Whack-a-Mole CI Tests # More descriptive name
+name: Whack-a-Mole CI Tests # Changed name to reflect the testing style
 
 on:  
   push:    
-    branches: [ 'main' ]  # Run on pushes to main branch
-    # Consider adding other branches for testing, e.g., 'feature-**'
-  pull_request: # Also good to run tests on pull requests
+    branches: [ 'main' ]  
+  pull_request:
     branches: [ 'main' ]
-  workflow_dispatch: # Allows manual triggering from GitHub UI
+  workflow_dispatch:
 
 jobs:  
-  unit_and_lint_testing: # More descriptive job name
-    runs-on: ubuntu-latest # Operating system for the runner
-
+  manual_javascript_tests: # Changed job name
+    runs-on: ubuntu-latest    
     steps:      
       - name: Get code        
-        uses: actions/checkout@v4 # Use the latest version of the checkout action
+        uses: actions/checkout@v4 # Use v4 for better security/features
 
-      - name: Set up Node.js environment # Explicitly set up Node.js
+      - name: Set up Node.js environment # Crucial for running any JS
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Specify your desired Node.js version (LTS recommended)
+          node-version: '20' # Or any Node.js version you prefer
 
-      - name: Install npm dependencies # Crucial step to get Jest, ESLint, Stylelint
-        run: npm install
+      # Removed 'npm install' because this manual test doesn't rely on Jest/npm dependencies
+      # If you later decide to run ESLint/Stylelint, you would need npm install.
 
-      - name: Run ESLint (JavaScript Linting) # Check for JS code quality and errors
-        # This assumes you have an ESLint config file (.eslintrc.json)
-        # and a script like "lint:js": "eslint . --ext .js" in package.json
-        run: npm run lint:js 
-
-      - name: Run Stylelint (CSS Linting) # Check for CSS code quality and errors
-        # This assumes you have a Stylelint config file (.stylelintrc.json)
-        # and a script like "lint:css": "stylelint 'style.css'" in package.json
-        run: npm run lint:css
-
-      - name: Run Jest tests (UI & Logic) # Execute your Jest test suite
-        # This assumes you have Jest installed and a script like "test": "jest" in package.json
-        # and your test files (e.g., __tests__/ui.test.js) are configured to run.
-        run: npm test
-
-      # The 'Look at the files', 'Verify node installation', and 'Test parser library'
-      # steps from your original YAML are mostly for debugging or specific scenarios.
-      # The above steps are the standard ones for testing a JavaScript project.
+      - name: Run manual sketch.js tests # This step runs your test file
+        run: node test_sketch.js
+        # If node test_sketch.js exits with a non-zero code (due to a failed assert),
+        # this step will fail, and the GitHub Action workflow will show as failed.
