--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,30 +1,25 @@
-# .github/workflows/testing.yml
+name: Run Tests for Whack-a-Mole Game
 
-name: Whack-a-Mole CI Tests # Changed name to reflect the testing style
-
-on:  
-  push:    
-    branches: [ 'main' ]  
+on:
+  push:
+    branches: [main]
   pull_request:
-    branches: [ 'main' ]
-  workflow_dispatch:
+    branches: [main]
 
-jobs:  
-  manual_javascript_tests: # Changed job name
-    runs-on: ubuntu-latest    
-    steps:      
-      - name: Get code        
-        uses: actions/checkout@v4 # Use v4 for better security/features
+jobs:
+  test:
+    runs-on: ubuntu-latest
 
-      - name: Set up Node.js environment # Crucial for running any JS
+    steps:
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v4
+
+      - name: 🔧 Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Or any Node.js version you prefer
+          node-version: '20'
 
-      # Removed 'npm install' because this manual test doesn't rely on Jest/npm dependencies
-      # If you later decide to run ESLint/Stylelint, you would need npm install.
-
-      - name: Run manual sketch.js tests # This step runs your test file
-        run: node test_sketch.js
-        # If node test_sketch.js exits with a non-zero code (due to a failed assert),
-        # this step will fail, and the GitHub Action workflow will show as failed.
+      - name: 🔍 Run Tests
+        run: |
+          npm install   # does nothing here but safe for future
+          npm test
