--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🔧 Set up Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: 🔍 Run Tests
+      - name: Run Tests
         run: |
           npm install   # does nothing here but safe for future
           npm test
